// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`CodeActionModule onInitialize should return results 1`] = `
{
  "capabilities": {
    "codeActionProvider": {
      "codeActionKinds": [
        "quickfix",
        "source.fixAll.stylelint",
      ],
    },
    "executeCommandProvider": {
      "commands": [
        "stylelint.openRuleDoc",
      ],
    },
  },
}
`;

exports[`CodeActionModule with action kind QuickFix, should create quick fix code action 1`] = `
[
  {
    "edit": {
      "documentChanges": [
        {
          "edits": [
            {
              "newText": "0000",
              "range": {
                "end": {
                  "character": 11,
                  "line": 0,
                },
                "start": {
                  "character": 10,
                  "line": 0,
                },
              },
            },
          ],
          "textDocument": {
            "uri": "foo",
            "version": 1,
          },
        },
      ],
    },
    "kind": "quickfix",
    "title": "Fix",
  },
  {
    "edit": {
      "changeAnnotations": undefined,
      "documentChanges": [
        {
          "edits": [
            {
              "newText": "/* stylelint-disable-next-line rule 1 */
",
              "range": {
                "end": {
                  "character": 0,
                  "line": 0,
                },
                "start": {
                  "character": 0,
                  "line": 0,
                },
              },
            },
          ],
          "textDocument": {
            "uri": "foo",
            "version": 1,
          },
        },
      ],
    },
    "kind": "quickfix",
    "title": "Disable rule 1 for this line",
  },
  {
    "edit": {
      "changeAnnotations": undefined,
      "documentChanges": [
        {
          "edits": [
            {
              "newText": "/* stylelint-disable rule 1 */
",
              "range": {
                "end": {
                  "character": 0,
                  "line": 0,
                },
                "start": {
                  "character": 0,
                  "line": 0,
                },
              },
            },
          ],
          "textDocument": {
            "uri": "foo",
            "version": 1,
          },
        },
      ],
    },
    "kind": "quickfix",
    "title": "Disable rule 1 for the entire file",
  },
  {
    "command": {
      "arguments": [
        {
          "uri": "https://stylelint.io/user-guide/rules/rule",
        },
      ],
      "command": "stylelint.openRuleDoc",
      "title": "Open documentation for rule 1",
    },
    "kind": "quickfix",
    "title": "Show documentation for rule 1",
  },
]
`;

exports[`CodeActionModule with action kind Source, should create fix-all code actions 1`] = `
[
  {
    "command": {
      "arguments": [
        {
          "uri": "foo",
          "version": 1,
        },
      ],
      "command": "stylelint.applyAutoFix",
      "title": "Fix all Stylelint auto-fixable problems",
    },
    "kind": "source",
    "title": "Fix all Stylelint auto-fixable problems",
  },
]
`;

exports[`CodeActionModule with action kind SourceFixAll, should create fix-all code actions 1`] = `
[
  {
    "edit": {
      "documentChanges": [
        {
          "edits": [
            {
              "newText": "text",
              "range": {
                "end": {
                  "character": 0,
                  "line": 0,
                },
                "start": {
                  "character": 0,
                  "line": 0,
                },
              },
            },
          ],
          "textDocument": {
            "uri": "foo",
            "version": 1,
          },
        },
      ],
    },
    "kind": "source.fixAll.stylelint",
    "title": "Fix all Stylelint auto-fixable problems",
  },
]
`;

exports[`CodeActionModule with action kind StylelintSourceFixAll, should create fix-all code actions 1`] = `
[
  {
    "edit": {
      "documentChanges": [
        {
          "edits": [
            {
              "newText": "text",
              "range": {
                "end": {
                  "character": 0,
                  "line": 0,
                },
                "start": {
                  "character": 0,
                  "line": 0,
                },
              },
            },
          ],
          "textDocument": {
            "uri": "foo",
            "version": 1,
          },
        },
      ],
    },
    "kind": "source.fixAll.stylelint",
    "title": "Fix all Stylelint auto-fixable problems",
  },
]
`;

exports[`CodeActionModule with no action kind, should create actions for each Stylelint diagnostic 1`] = `
[
  {
    "edit": {
      "changeAnnotations": undefined,
      "documentChanges": [
        {
          "edits": [
            {
              "newText": "/* stylelint-disable-next-line rule 1 */
",
              "range": {
                "end": {
                  "character": 0,
                  "line": 0,
                },
                "start": {
                  "character": 0,
                  "line": 0,
                },
              },
            },
          ],
          "textDocument": {
            "uri": "foo",
            "version": 1,
          },
        },
      ],
    },
    "kind": "quickfix",
    "title": "Disable rule 1 for this line",
  },
  {
    "edit": {
      "changeAnnotations": undefined,
      "documentChanges": [
        {
          "edits": [
            {
              "newText": "/* stylelint-disable rule 1 */
",
              "range": {
                "end": {
                  "character": 0,
                  "line": 0,
                },
                "start": {
                  "character": 0,
                  "line": 0,
                },
              },
            },
          ],
          "textDocument": {
            "uri": "foo",
            "version": 1,
          },
        },
      ],
    },
    "kind": "quickfix",
    "title": "Disable rule 1 for the entire file",
  },
  {
    "command": {
      "arguments": [
        {
          "uri": "https://stylelint.io/user-guide/rules/rule",
        },
      ],
      "command": "stylelint.openRuleDoc",
      "title": "Open documentation for rule 1",
    },
    "kind": "quickfix",
    "title": "Show documentation for rule 1",
  },
  {
    "edit": {
      "changeAnnotations": undefined,
      "documentChanges": [
        {
          "edits": [
            {
              "newText": "/* stylelint-disable-next-line rule 3 */
",
              "range": {
                "end": {
                  "character": 0,
                  "line": 0,
                },
                "start": {
                  "character": 0,
                  "line": 0,
                },
              },
            },
          ],
          "textDocument": {
            "uri": "foo",
            "version": 1,
          },
        },
      ],
    },
    "kind": "quickfix",
    "title": "Disable rule 3 for this line",
  },
  {
    "edit": {
      "changeAnnotations": undefined,
      "documentChanges": [
        {
          "edits": [
            {
              "newText": "/* stylelint-disable rule 3 */
",
              "range": {
                "end": {
                  "character": 0,
                  "line": 0,
                },
                "start": {
                  "character": 0,
                  "line": 0,
                },
              },
            },
          ],
          "textDocument": {
            "uri": "foo",
            "version": 1,
          },
        },
      ],
    },
    "kind": "quickfix",
    "title": "Disable rule 3 for the entire file",
  },
]
`;
